--- a/GUI_designs/GUI_v0/dashboard.kv
+++ b/GUI_designs/GUI_v0/dashboard.kv
@@ -30,7 +30,7 @@
 
 ####### KMS_ran #######
     Label:
-        text: app.str_kms_ran
+        text: str(app.variables["kms_ran"])
         font_name: 'myfont'
         pos_hint: {'x':0.45, 'y':0.6}
         size_hint: None, None
