--- a/GUI_designs/GUI_v0/dashboard.kv
+++ b/GUI_designs/GUI_v0/dashboard.kv
@@ -1,7 +1,3 @@
-
-############################ 1024 * 1920 res ############################################## 
-
-
 <FloatLayout>
         
 
@@ -166,6 +162,13 @@
         on_active: app.headlight_callback(self, self.active)
         pos_hint: {'x':0.55, 'y':0.04}
         size_hint: None, None
+    Image:
+        source: 'locate.png'
+        pos_hint: {'x':0.57, 'y':-0.01}
+        size_hint: None, None
+        size: 67, 65
+        allow_stretch: True
+        keep_ratio: False
 
     Switch:
         active: False
