--- a/GUI_designs/GUI_v0/dashboard.kv
+++ b/GUI_designs/GUI_v0/dashboard.kv
@@ -198,5 +198,11 @@
         pos_hint: {'x':0.76, 'y':0.54}
         size_hint: None, None
         font_size: 35
-
+    Label:
+        text: str(app.variables["oxygen"])+ '%'
+        font_name: 'myfont'
+        color: (0,0.1,1)
+        pos_hint: {'x':0.76, 'y':0.25}
+        size_hint: None, None
+        font_size: 30
     
