--- a/GUI_designs/GUI_v0/dashboard.kv
+++ b/GUI_designs/GUI_v0/dashboard.kv
@@ -159,7 +159,7 @@
 
     Switch:
         active: False
-        on_active: app.headlight_callback(self, self.active)
+        on_active: app.map_callback(self, self.active)
         pos_hint: {'x':0.55, 'y':0.04}
         size_hint: None, None
     Image:
